--- a/formatter.yml
+++ b/formatter.yml
@@ -26,9 +26,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make init
-      run: make init
+      run: cd ../../.. && make init
     - name: make build
-      run: make build
+      run: cd ../../.. && make build
     - uses: DoozyX/clang-format-lint-action@v0.13
       with:
         source: './src'
