--- a/.github/workflows/build-test-action.yml
+++ b/.github/workflows/build-test-action.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make init
-      run: cd ../.. && make init
+      run:  make init
     - name: make build
-      run: cd ../.. && make build
+      run:  make build
