--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -1,17 +1,4 @@
-name: C/C++ CI
-
-on:
-  push:
-    branches: [ master ]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-name: build-test-action
+name: format-action
 on:
   push:
     branches: [ master ]
