--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -2,14 +2,19 @@ name: format-action
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    steps:
+        - uses: actions/checkout@v2
+        - name: make init
+          run:  make init
+        - name: make build
+          run:  make build
+  
+  format:
+    runs-on: ubuntu-latest
     steps:
     - uses: ./build-test-action@v1
     - uses: DoozyX/clang-format-lint-action@v0.13
@@ -19,6 +24,10 @@ jobs:
         clangFormatVersion: 12
         inplace: True
         style='{BreakBeforeBraces: Linux}'
+        
+  commit:
+    runs-on: ubuntu-latest
+    steps:
     - uses: EndBug/add-and-commit@v4
       with:
         add: './src'
