--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -16,6 +16,7 @@ jobs:
   format:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: DoozyX/clang-format-lint-action@v0.13
       with:
         source: './src'
@@ -27,6 +28,7 @@ jobs:
   commit:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: EndBug/add-and-commit@v4
       with:
         add: './src'
