--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -30,6 +30,6 @@ jobs:
         author_name: FormatterBot
         author_email: formatter@bot.com
         message: 'Format code'
-        
-        
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
