--- a/config/p2config.json
+++ b/config/p2config.json
@@ -1,11 +1,15 @@
 {
     "boot": {
-        "core-file": "kernel.core.umps",
+        "core-file": "/home/mattia/redesigned-octo-computing-machine/output/ROCM_kernel.core.umps",
         "load-core-file": true
     },
     "bootstrap-rom": "/usr/share/umps3/coreboot.rom.umps",
     "clock-rate": 1,
     "devices": {
+        "disk0": {
+            "enabled": true,
+            "file": "/home/mattia/redesigned-octo-computing-machine/output/disk0.umps"
+        },
         "terminal0": {
             "enabled": true,
             "file": "term0.umps"
@@ -16,7 +20,7 @@
     "num-ram-frames": 64,
     "symbol-table": {
         "asid": 64,
-        "file": "kernel.stab.umps"
+        "file": "/home/mattia/redesigned-octo-computing-machine/output/ROCM_kernel.stab.umps"
     },
     "tlb-floor-address": "0x80000000",
     "tlb-size": 16
