--- a/config/p3config.json
+++ b/config/p3config.json
@@ -8,7 +8,7 @@
     "devices": {
         "flash0": {
             "enabled": true,
-            "file": "/home/mattia/redesigned-octo-computing-machine/test/printerTest.umps"
+            "file": "../test/strConcat.umps"
         },
         "flash1": {
             "enabled": true,
